--- a/Editor/Resources/RailsEditor.uss
+++ b/Editor/Resources/RailsEditor.uss
@@ -316,3 +316,68 @@
     border-bottom-color: var(--rails-toolbar-stroke-color);
     border-bottom-width: 1px;
 }
+
+.constrained-toggle {
+    width: 16px;
+    height: 16px;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.constrained-toggle .unity-toggle__input {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+}
+
+.constrained-toggle .unity-toggle__input .unity-toggle__checkmark {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: var(--rails-icon-constrained-disabled);
+    -unity-background-image-tint-color: var(--rails-button-icon-color);
+}
+
+.constrained-toggle .unity-toggle__input:hover .unity-toggle__checkmark {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    width: 100%;
+    height: 100%;
+    -unity-background-image-tint-color: var(--rails-button-icon-hover-color);
+}
+
+.constrained-toggle .unity-toggle__input:checked .unity-toggle__checkmark {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: var(--rails-icon-constrained-enabled);
+}
+
+.tracks-view * .unity-scroll-view__content-container {
+    flex-grow: 1;
+}
