--- a/Editor/Resources/RailsTrack.uxml
+++ b/Editor/Resources/RailsTrack.uxml
@@ -1,5 +1,4 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
     <ui:VisualElement name="track" class="track-control" style="height: 40px; padding-left: 3px; padding-right: 5px; padding-top: 10px; padding-bottom: 10px; align-self: center; flex-direction: row; flex-grow: 1; width: 100%;">
         <ui:VisualElement class="drag_handler" style="flex-grow: 0; flex-shrink: 0; width: 16px; height: 16px; margin-right: 3px;" />
         <uie:ObjectField name="animated-component" style="margin-left: 0; margin-right: 5px; flex-grow: 1; flex-shrink: 6; flex-basis: 140px;">
@@ -8,10 +7,16 @@
                 <ui:DataBinding property="objectType" data-source-path="Type" binding-mode="ToTarget" />
             </Bindings>
         </uie:ObjectField>
-        <ui:VisualElement name="value-container" style="flex-grow: 1; flex-direction: row; align-items: center; flex-shrink: 4; flex-basis: 115px;">
-            <ui:Vector3Field name="vector3-value" style="flex-shrink: 4; flex-grow: 1;" />
-            <ui:Vector2Field name="vector2-value" style="margin-left: 0; margin-right: 0; flex-shrink: 1; flex-grow: 1; display: none;" />
-            <ui:FloatField value="42.2" name="float-value" style="margin-left: 0; margin-right: 0; display: none; flex-shrink: 1; flex-grow: 1;" />
+        <ui:VisualElement name="value-container" style="flex-grow: 3; flex-direction: row; align-items: center; flex-shrink: 4; flex-basis: 115px;">
+            <Rails.Editor.Controls.AnimationValueControl style="flex-grow: 1;">
+                <Bindings>
+                    <ui:DataBinding property="SingleValue" data-source-path="CurrentSingleValue" binding-mode="ToTarget" />
+                    <ui:DataBinding property="Vector2Value" data-source-path="CurrentVector2Value" binding-mode="ToTarget" />
+                    <ui:DataBinding property="Vector3Value" data-source-path="CurrentVector3Value" binding-mode="ToTarget" />
+                    <ui:DataBinding property="ValueType" data-source-path="ValueType" binding-mode="ToTarget" />
+                    <ui:DataBinding property="ConstrainedProportions" data-source-path="CurrentConstrainedProportions" binding-mode="ToTarget" />
+                </Bindings>
+            </Rails.Editor.Controls.AnimationValueControl>
             <ui:VisualElement name="key" class="rails_key_toggle" style="flex-grow: 0; width: 10px; height: 10px; flex-shrink: 0;" />
         </ui:VisualElement>
     </ui:VisualElement>
