--- a/Editor/Resources/USS/RailsLightTheme.uss
+++ b/Editor/Resources/USS/RailsLightTheme.uss
@@ -4,6 +4,10 @@
 	--rails-icon-play-head: resource('Icons/play_head');
 	--rails-icon-drag-handler: resource('Icons/drag_handler');
 	--rails-icon-drop-down: resource('Icons/drop_down_icon');
+	--rails-icon-constrained-enabled: resource('Icons/constrained_enabled');
+	--rails-icon-constrained-disabled: resource('Icons/constrained_disabled');
+	--rails-button-icon-color: #555555;
+	--rails-button-icon-hover-color: #787878;
 	--rails-ruler-background-color: #C8C8C8;
 	--rails-ruler-stroke-color: #717171;
 	--rails-ruler-text-color: #4C4C4C;
