--- a/Editor/Resources/RailsInspector.uss
+++ b/Editor/Resources/RailsInspector.uss
@@ -81,3 +81,102 @@
     -unity-text-align: middle-left;
     color: var(--color-active);
 }
+
+.ease-function {
+    margin-right: 7px;
+    margin-bottom: 4px;
+}
+
+.ease-first-point {
+    margin-bottom: 4px;
+}
+
+.ease-second-point {
+    margin-bottom: 4px;
+}
+
+.ease-view {
+    flex-basis: 300px;
+}
+
+.ease-container {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: rgb(40, 40, 40);
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.ease-border {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.ease-handle {
+    width: 16px;
+    height: 16px;
+}
+
+.ease-start {
+    --handler-color: var(--rails-ease-stroke-start-color);
+}
+
+.ease-end {
+    --handler-color: var(--rails-ease-stroke-end-color);
+}
+
+.ease-axes {
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-color: rgb(106, 106, 106);
+    border-right-color: rgb(106, 106, 106);
+    border-top-color: rgb(106, 106, 106);
+    border-bottom-color: rgb(106, 106, 106);
+    flex-grow: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.ease-spline {
+    --start-color: var(--rails-ease-stroke-start-color);
+    --center-color: var(--rails-ease-stroke-center-color);
+    --end-color: var(--rails-ease-stroke-end-color);
+    --line-width: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.ease-first-point FloatField .unity-float-field__input {
+    color: var(--rails-ease-stroke-start-color);
+}
+
+.ease-second-point FloatField .unity-float-field__input {
+    color: var(--rails-ease-stroke-end-color);
+}
