--- a/Editor/Resources/RailsInspector.uss
+++ b/Editor/Resources/RailsInspector.uss
@@ -104,7 +104,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    background-color: rgb(40, 40, 40);
+    background-color: var(--rails-ease-background-color);
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -122,14 +122,14 @@
     border-right-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
-    border-left-color: rgb(0, 0, 0);
-    border-right-color: rgb(0, 0, 0);
-    border-top-color: rgb(0, 0, 0);
-    border-bottom-color: rgb(0, 0, 0);
+    border-left-color: var(--rails-ease-border-color);
+    border-right-color: var(--rails-ease-border-color);
+    border-top-color: var(--rails-ease-border-color);
+    border-bottom-color: var(--rails-ease-border-color);
     position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
+    left: -1px;
+    right: -1px;
     bottom: 0;
 }
 
@@ -149,10 +149,10 @@
 .ease-axes {
     border-top-width: 1px;
     border-bottom-width: 1px;
-    border-left-color: rgb(106, 106, 106);
-    border-right-color: rgb(106, 106, 106);
-    border-top-color: rgb(106, 106, 106);
-    border-bottom-color: rgb(106, 106, 106);
+    border-left-color: var(--rails-ease-axes-color);
+    border-right-color: var(--rails-ease-axes-color);
+    border-top-color: var(--rails-ease-axes-color);
+    border-bottom-color: var(--rails-ease-axes-color);
     flex-grow: 0;
     position: absolute;
     top: 0;
@@ -179,4 +179,41 @@
 
 .ease-second-point FloatField .unity-float-field__input {
     color: var(--rails-ease-stroke-end-color);
+}
+
+.unity-button Image {
+    --unity-image-tint-color: var(--rails-button-icon-color);
+}
+
+.key-inspector-content {
+    flex-grow: 0;
+    border-bottom-width: 1px;
+    border-bottom-color: var(--rails-key-inspector-border-color);
+    background-color: var(--rails-key-inspector-background-color);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.key-inspector-top {
+    flex-grow: 0;
+    flex-direction: row;
+    height: 20px;
+    background-color: var(--rails-key-inspector-top-background-color);
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-bottom-color: var(--rails-key-inspector-top-border-color);
+    border-top-color: var(--rails-key-inspector-border-color);
+}
+
+.key-inspector-top:hover {
+    flex-grow: 0;
+    flex-direction: row;
+    height: 20px;
+    background-color: var(--rails-key-inspector-top-background-hover-color);
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-bottom-color: var(--rails-key-inspector-top-border-color);
+    border-top-color: var(--rails-key-inspector-border-color);
 }
