--- a/Editor/Resources/USS/RailsDarkTheme.uss
+++ b/Editor/Resources/USS/RailsDarkTheme.uss
@@ -6,6 +6,9 @@
 	--rails-icon-drop-down: resource('Icons/drop_down_icon');
 	--rails-icon-constrained-enabled: resource('Icons/constrained_enabled');
 	--rails-icon-constrained-disabled: resource('Icons/constrained_disabled');
+    --rails-icon-ease-no-animation: resource('Icons/no-animation.png');
+	--rails-icon-ease-curve: resource('Icons/curve.png');
+	--rails-icon-ease-function: resource('Icons/function.png');
 	--rails-button-icon-color: #C4C4C4;
 	--rails-button-icon-hover-color: #F0F0F0;
 	--rails-ruler-background-color: #303030;
@@ -29,9 +32,17 @@
 	--rails-time-scroller-stroke-color: #242424;
 	--rails-selection-box-background-color: rgba(71, 158, 255, 0.15);
 	--rails-selection-box-stroke-color: rgba(71, 158, 255, 0.5);
-	--rails-ease-stroke-start-color: #47F4E0;
+	--rails-key-inspector-top-background-color: #3C3C3C;
+	--rails-key-inspector-top-background-hover-color: #474747;
+	--rails-key-inspector-top-border-color: #303030;
+	--rails-key-inspector-border-color: #1A1A1A;
+	--rails-key-inspector-background-color: #353535;
+    --rails-ease-stroke-start-color: #47F4E0;
 	--rails-ease-stroke-center-color: #6D6D6D;
 	--rails-ease-stroke-end-color: #3E85EE;
+	--rails-ease-background-color: #282828;
+	--rails-ease-axes-color: #6A6A6A;
+	--rails-ease-border-color: #282828;
 }
 
 .move-anchor{
