Implements animation clip looping
Introduces `LoopType` and `LoopCount` properties to animation clips, enabling control over playback repetition. This functionality is reflected in both the runtime behavior and the editor UI.

Adds dedicated UI controls to the `ClipControl` for configuring loop type and count through a new popup.

Refactors existing clip popups into separate concerns for time and loop settings, improving modularity.

Updates editor styling (USS) and adds new icons to support the new looping, play, pause, next, and previous controls.

Addresses Unity serialization warnings by marking editor-only change-tracking fields as `[NonSerialized]`.

--- a/Editor/Resources/RailsClipControl.uxml
+++ b/Editor/Resources/RailsClipControl.uxml
@@ -1,15 +1,21 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
+    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor"/>
     <ui:VisualElement name="clip-controls" class="clip-controls">
         <ui:VisualElement name="controls" style="flex-grow: 1; flex-direction: row; padding-top: 10px; padding-right: 16px; padding-bottom: 10px; padding-left: 16px; width: 100%; height: 100%;">
-            <ui:VisualElement style="flex-grow: 1;" />
+            <ui:Toggle name="play" class="icon-toggle play-toggle" style="margin-top: 0; margin-bottom: 0; margin-left: 0;"/>
+            <ui:Button text="" name="next" class="icon-button next"/>
+            <ui:VisualElement name="loop" class="loop-drop-down">
+                <ui:Image name="loop-icon" class="loop-icon"/>
+                <ui:VisualElement name="drop-down-icon" class="drop-down-icon" style="-unity-background-scale-mode: scale-and-crop; background-image: resource(&quot;Icons/drop_down_icon&quot;);"/>
+            </ui:VisualElement>
+            <ui:VisualElement name="space" style="flex-grow: 1;"/>
             <ui:VisualElement name="time" class="time-drop-down" style="flex-direction: row; align-self: center;">
                 <ui:Label text="00:00" name="time-text" style="font-size: 14px;">
                     <Bindings>
-                        <ui:DataBinding property="text" data-source-path="TimeHeadPositionText" binding-mode="ToTarget" />
+                        <ui:DataBinding property="text" data-source-path="TimeHeadPositionText" binding-mode="ToTarget"/>
                     </Bindings>
                 </ui:Label>
-                <ui:VisualElement name="drop-down-icon" class="drop-down-icon" style="-unity-background-scale-mode: scale-and-crop;" />
+                <ui:VisualElement name="drop-down-icon" class="drop-down-icon" style="-unity-background-scale-mode: scale-and-crop;"/>
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
