--- a/Editor/Resources/EaseControl.uxml
+++ b/Editor/Resources/EaseControl.uxml
@@ -4,9 +4,9 @@
         <ui:Toggle text="Ease" name="foldout-toggle" value="true" class="unity-foldout__toggle" style="flex-direction: row-reverse;"/>
         <ui:VisualElement name="space" style="flex-grow: 1;"/>
         <ui:ToggleButtonGroup value="001" name="ease-type-field" class="ease-type-field">
-            <ui:Button icon-image="project://database/Assets/Rails/Editor/Resources/Icons/no-animation.png?fileID=2800000&amp;guid=1940ef18ceb20f04f9dac07ceda5d2c9&amp;type=3#no-animation"/>
-            <ui:Button icon-image="project://database/Assets/Rails/Editor/Resources/Icons/curve.png?fileID=2800000&amp;guid=ac89dffcc9528874589d6c4849f4e097&amp;type=3#curve"/>
-            <ui:Button icon-image="project://database/Assets/Rails/Editor/Resources/Icons/function.png?fileID=2800000&amp;guid=85edac33c87ccab4a8d2a855a2c65c21&amp;type=3#function"/>
+            <ui:Button name="no-animation" icon-image="project://database/Assets/Rails/Editor/Resources/Icons/no_animation.png?fileID=2800000&amp;guid=1940ef18ceb20f04f9dac07ceda5d2c9&amp;type=3#no_animation"/>
+            <ui:Button name="curve" icon-image="project://database/Assets/Rails/Editor/Resources/Icons/curve.png?fileID=2800000&amp;guid=ac89dffcc9528874589d6c4849f4e097&amp;type=3#curve"/>
+            <ui:Button name="function" icon-image="project://database/Assets/Rails/Editor/Resources/Icons/function.png?fileID=2800000&amp;guid=85edac33c87ccab4a8d2a855a2c65c21&amp;type=3#function"/>
         </ui:ToggleButtonGroup>
     </ui:VisualElement>
     <ui:VisualElement name="content" style="flex-grow: 0; padding-top: 4px; padding-right: 7px; padding-bottom: 4px; padding-left: 4px;">
