--- a/Editor/Resources/RailsSecondPage.uxml
+++ b/Editor/Resources/RailsSecondPage.uxml
@@ -1,10 +1,15 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor" />
-    <Rails.Editor.Controls.ClipControl data-source-path="SelectedClip" />
+    <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor"/>
+    <Rails.Editor.Controls.ClipControl data-source-path="SelectedClip">
+        <Bindings>
+            <ui:DataBinding property="CanEdit" data-source-path="CanEdit" binding-mode="ToTarget"/>
+            <ui:DataBinding property="LoopIconStyle" data-source-path="LoopIconStyle" binding-mode="ToTarget"/>
+        </Bindings>
+    </Rails.Editor.Controls.ClipControl>
     <Rails.Editor.Controls.TracksListView data-source-path="SelectedClip" style="flex-grow: 1; flex-basis: 100%; margin-bottom: 16px;">
         <Bindings>
-            <ui:DataBinding property="CanEdit" data-source-path="CanEdit" binding-mode="ToTarget" />
-            <ui:DataBinding property="Values" data-source-path="Tracks" binding-mode="ToTarget" />
+            <ui:DataBinding property="CanEdit" data-source-path="CanEdit" binding-mode="ToTarget"/>
+            <ui:DataBinding property="Values" data-source-path="Tracks" binding-mode="ToTarget"/>
         </Bindings>
     </Rails.Editor.Controls.TracksListView>
 </ui:UXML>
