--- a/Editor/Resources/USS/RailsDarkTheme.uss
+++ b/Editor/Resources/USS/RailsDarkTheme.uss
@@ -6,9 +6,15 @@
 	--rails-icon-drop-down: resource('Icons/drop_down_icon');
 	--rails-icon-constrained-enabled: resource('Icons/constrained_enabled');
 	--rails-icon-constrained-disabled: resource('Icons/constrained_disabled');
-    --rails-icon-ease-no-animation: resource('Icons/no-animation.png');
-	--rails-icon-ease-curve: resource('Icons/curve.png');
-	--rails-icon-ease-function: resource('Icons/function.png');
+    --rails-icon-ease-no-animation: resource('Icons/no_animation');
+	--rails-icon-ease-curve: resource('Icons/curve');
+	--rails-icon-ease-function: resource('Icons/function');
+	--rails-icon-play: resource('Icons/play');
+	--rails-icon-pause: resource('Icons/pause');
+	--rails-icon-prev: resource('Icons/prev');
+	--rails-icon-next: resource('Icons/next');
+	--rails-icon-loop-cycle: resource('Icons/cycle');
+	--rails-icon-loop-ping-pong: resource('Icons/ping_pong');
 	--rails-button-icon-color: #C4C4C4;
 	--rails-button-icon-hover-color: #F0F0F0;
 	--rails-ruler-background-color: #303030;
@@ -58,58 +64,4 @@
 .event{
 	--color-active: #E1E1E1;
 	--color-not-active: #ACACAC;
-}
-
-.constrained-toggle .unity-toggle__input {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-}
-
-.constrained-toggle .unity-toggle__input .unity-toggle__checkmark {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: var(--rails-icon-constrained-disabled);
-    -unity-background-image-tint-color: var(--rails-button-icon-color);
-}
-
-.constrained-toggle .unity-toggle__input:hover .unity-toggle__checkmark {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    width: 100%;
-    height: 100%;
-    -unity-background-image-tint-color: var(--rails-button-icon-hover-color);
-}
-
-.constrained-toggle .unity-toggle__input:checked .unity-toggle__checkmark {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: var(--rails-icon-constrained-enabled);
 }
