--- a/Editor/Resources/USS/RailsLightTheme.uss
+++ b/Editor/Resources/USS/RailsLightTheme.uss
@@ -6,9 +6,15 @@
 	--rails-icon-drop-down: resource('Icons/drop_down_icon');
 	--rails-icon-constrained-enabled: resource('Icons/constrained_enabled');
 	--rails-icon-constrained-disabled: resource('Icons/constrained_disabled');
-	--rails-icon-ease-no-animation: resource('Icons/no-animation.png');
-	--rails-icon-ease-curve: resource('Icons/curve.png');
-	--rails-icon-ease-function: resource('Icons/function.png');
+	--rails-icon-ease-no-animation: resource('Icons/no-animation');
+	--rails-icon-ease-curve: resource('Icons/curve');
+	--rails-icon-ease-function: resource('Icons/function');
+	--rails-icon-play: resource('Icons/play');
+	--rails-icon-pause: resource('Icons/pause');
+	--rails-icon-prev: resource('Icons/prev');
+	--rails-icon-next: resource('Icons/next');
+	--rails-icon-loop-cycle: resource('Icons/cycle');
+	--rails-icon-loop-ping-pong: resource('Icons/ping_pong');
 	--rails-button-icon-color: #555555;
 	--rails-button-icon-hover-color: #787878;
 	--rails-ruler-background-color: #C8C8C8;
