--- a/Editor/Resources/RailsClipControl.uxml
+++ b/Editor/Resources/RailsClipControl.uxml
@@ -2,8 +2,11 @@
     <Style src="project://database/Assets/Rails/Editor/Resources/RailsEditor.uss?fileID=7433441132597879392&amp;guid=a52f72ccd09932d4795d5bf54f12136c&amp;type=3#RailsEditor"/>
     <ui:VisualElement name="clip-controls" class="clip-controls">
         <ui:VisualElement name="controls" style="flex-grow: 1; flex-direction: row; padding-top: 10px; padding-right: 16px; padding-bottom: 10px; padding-left: 16px; width: 100%; height: 100%;">
-            <ui:Toggle name="play" class="icon-toggle play-toggle" style="margin-top: 0; margin-bottom: 0; margin-left: 0;"/>
-            <ui:Button text="" name="next" class="icon-button next"/>
+            <ui:Toggle name="preview" class="icon-toggle preview-toggle" style="margin-top: 0; margin-bottom: 0; margin-left: 0;"/>
+            <ui:VisualElement name="play-controls" enabled="false" style="flex-grow: 0; flex-direction: row;">
+                <ui:Toggle name="play" class="icon-toggle play-toggle" style="margin-top: 0; margin-bottom: 0; margin-left: 0;"/>
+                <ui:Button text="" name="next" class="icon-button next"/>
+            </ui:VisualElement>
             <ui:VisualElement name="loop" class="loop-drop-down">
                 <ui:Image name="loop-icon" class="loop-icon"/>
                 <ui:VisualElement name="drop-down-icon" class="drop-down-icon" style="-unity-background-scale-mode: scale-and-crop; background-image: resource(&quot;Icons/drop_down_icon&quot;);"/>
